[AnyWeaver] Adds support for dynamically loading JARs